fixed header to top to be visible at all times. also updated menu items style to flex

--- a/rs-app/src/components/appHeader/appHeader.css
+++ b/rs-app/src/components/appHeader/appHeader.css
@@ -1,11 +1,13 @@
 .header-top {
     height: 50px;
-
+    width: 100vw;
+    position: fixed;
+    background-color: white;
 }
 
 .rs-logo {
-    width: 50px;
-    height: auto;
+    width: auto;
+    height: 50px;
     float: left;
 }
 
@@ -17,14 +19,15 @@
 }
 
 .cart-icon {
-    width: 50px;
-    height: auto;
+    width: auto;
+    height: 48px;
     float: right;
 }
 
 
 .header-container {
     text-align: center;
+    padding-top: 50px;
 }
 
 .title {
